--- a/Areas/Service/Views/Manage/Edit.cshtml
+++ b/Areas/Service/Views/Manage/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model BS.Common.Model.Mongo.ServiceModels.ServiceEntity
+﻿@model BS.Microservice.Web.Model.ServiceEntity
 @{
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_Operate.cshtml";
