--- a/Areas/Service/Views/Manage/Index.cshtml
+++ b/Areas/Service/Views/Manage/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using BS.Microservice.Web.Common
+@{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
     List<string> BtnList = ViewBag.BtnList as List<string>;
@@ -119,7 +120,7 @@ $(function () {
             html += "<a title='编辑' href='javascript:;' onclick='edit(\"" +
                 b._id +
                 "\")' style='text-decoration:none'><i class='Hui-iconfont'>&#xe6df;</i></a>";
-            if (!b.IsApproved) {
+            if (!b.IsApproved&&'@(CurrentHelper.CurrentUser.User.UserName=="admin")'=='True') {
                 html += "<a title='审批' href='javascript:;' onclick='regService(\"" +
                     b._id +
                     "\")' class='ml-5' style='text-decoration:none'><i class='fa fa-file-powerpoint-o'></i></a>";
